<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewPo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/space_08dp">

        <TextView
            android:id="@+id/tv_document_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_po_document_number" />

        <TextView
            android:id="@+id/tv_created_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_po_created_by" />

        <TextView
            android:id="@+id/tv_vendor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_po_vendor_name" />

        <TextView
            android:id="@+id/tv_grand_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_po_grand_total" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
