<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_background"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sell"
            style="@style/ThemeBlue.Button"
            android:layout_margin="@dimen/space_08dp"
            android:enabled="true"
            android:text="@string/btn_sell_in_home_fragment"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_check_product"
            style="@style/ThemeBlue.Button"
            android:layout_margin="@dimen/space_08dp"
            android:enabled="true"
            android:text="@string/btn_check_product_in_home_fragment" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_transfer"
            style="@style/ThemeBlue.Button"
            android:layout_margin="@dimen/space_08dp"
            android:enabled="true"
            android:text="@string/btn_transfer"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_po_manage"
            style="@style/ThemeBlue.Button"
            android:layout_margin="@dimen/space_08dp"
            android:enabled="true"
            android:text="@string/btn_po_manage" />

    </LinearLayout>

</FrameLayout>